added req.txt file

--- a/templates/loginauthentication/index.html
+++ b/templates/loginauthentication/index.html
@@ -15,7 +15,7 @@
       margin-top: 150px;
       height: 180px;
       width: 300px;
-      border: 1px
+      border: 1px;
       padding: 10px;
       border-radius: 40px;
       text-align: center;
